added bottom navigation bar animation so that it looks like a fragment. Added change password/saved recipes sample screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="text_favorites">Favorites</string>
     <string name="text_schedules">Schedules</string>
     <string name="text_music">Music</string>
+    <string-array name="saved_recipes" >
+        <item>chicken</item>
+    </string-array>
 </resources>
