--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,11 @@
     <string name="text_schedules">Schedules</string>
     <string name="text_music">Music</string>
     <string name="thumbnail">Music</string>
-    <string name="promt_email">email</string>
+    <string name="promt_email">Email</string>
     <string name="action_sign_in_short">action_sign_in_short</string>
     <string name="action_sign_up_short">action_sign_up_short</string>
-    <string name="action_sign_in">action_sign_in</string>
-    <string name="action_sign_up">action_sign_up</string>
+    <string name="action_sign_in">SIGN IN</string>
+    <string name="action_sign_up">REGISTER NEW ACCOUNT</string>
     <string-array name="arrayRecipes">
         <item></item>
     </string-array>
